--- a/jammin.ui
+++ b/jammin.ui
@@ -48,7 +48,8 @@
        </size>
       </property>
       <property name="styleSheet">
-       <string notr="true">background-color: #f0f4f9; border-right: 1px solid #e0e0e0;</string>
+       <string notr="true">background-color: #f0f4f9;
+border-right: 1px solid #e0e0e0;</string>
       </property>
       <layout class="QVBoxLayout" name="verticalLayout_2">
        <item>
@@ -80,17 +81,60 @@
         </widget>
        </item>
        <item>
-        <spacer name="verticalSpacer">
-         <property name="orientation">
-          <enum>Qt::Vertical</enum>
-         </property>
-         <property name="sizeHint" stdset="0">
+        <widget class="QPushButton" name="btn_delete">
+         <property name="minimumSize">
           <size>
-           <width>20</width>
-           <height>40</height>
+           <width>0</width>
+           <height>35</height>
           </size>
          </property>
-        </spacer>
+         <property name="styleSheet">
+          <string notr="true">
+           QPushButton {
+            background-color: #ffdad6;
+            border-radius: 17px;
+            color: #ba1a1a;
+            font-weight: bold;
+            text-align: center;
+            margin-top: 5px;
+           }
+           QPushButton:hover {
+            background-color: #ffb4ab;
+           }
+          </string>
+         </property>
+         <property name="text">
+          <string>🗑️ 선택된 대화 삭제</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QListWidget" name="session_list">
+         <property name="styleSheet">
+          <string notr="true">
+           QListWidget {
+            border: none;
+            background-color: transparent;
+            font-size: 14px;
+            color: #444746;
+            outline: none;
+           }
+           QListWidget::item {
+            padding: 10px;
+            border-radius: 10px;
+            margin-bottom: 5px;
+           }
+           QListWidget::item:hover {
+            background-color: #e8eaed;
+           }
+           QListWidget::item:selected {
+            background-color: #d3e3fd;
+            color: #041e49;
+            font-weight: bold;
+           }
+          </string>
+         </property>
+        </widget>
        </item>
       </layout>
      </widget>
@@ -101,15 +145,11 @@
        <item>
         <widget class="QTextBrowser" name="chat_display">
          <property name="styleSheet">
-          <string notr="true">border: none; padding: 20px; font-size: 14px;</string>
+          <string notr="true">border: none; padding: 20px;
+font-size: 14px;</string>
          </property>
          <property name="html">
-          <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
-&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
-p, li { white-space: pre-wrap; }
-&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Malgun Gothic'; font-size:14px; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:18pt; font-weight:600; color:#444746;&quot;&gt;안녕하세요, Jammin입니다.&lt;/span&gt;&lt;/p&gt;
-&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; color:#444746;&quot;&gt;무엇을 도와드릴까요?&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+            <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:18pt; font-weight:600; color:#444746;&quot;&gt;안녕하세요, Jammin입니다.&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
          </property>
         </widget>
        </item>
@@ -146,7 +186,7 @@ p, li { white-space: pre-wrap; }
               QLineEdit:focus {
                background-color: #ffffff;
                border: 1px solid #d3d3d3;
-               }
+              }
              </string>
             </property>
             <property name="placeholderText">
@@ -186,16 +226,6 @@ p, li { white-space: pre-wrap; }
      </widget>
     </item>
    </layout>
-  </widget>
-  <widget class="QMenuBar" name="menubar">
-   <property name="geometry">
-    <rect>
-     <x>0</x>
-     <y>0</y>
-     <width>1000</width>
-     <height>22</height>
-    </rect>
-   </property>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
